fix alignment

--- a/app/components/wallet/settings/paper-wallets/CreatePaperDialog.scss
+++ b/app/components/wallet/settings/paper-wallets/CreatePaperDialog.scss
@@ -15,6 +15,7 @@
     display: inline-block;
     background-repeat: no-repeat;
     background-size: contain;
+    background-position: center center;
     margin-top: 16px;
     margin-bottom: 24px;
     width: 75px;
@@ -36,6 +37,7 @@
       display: inline-block;
       background-repeat: no-repeat;
       background-size: contain;
+      background-position: center center;
       margin-top: 10px;
       margin-bottom: 20px;
       width: 170px;
